--- a/simple/simple.less
+++ b/simple/simple.less
@@ -1,6 +1,32 @@
 @import (less) "../base/normalize.css";
 @import "../base/lesshat.less";
 
+#TOC {
+    border: 3px solid #6758E7;
+    border-radius: 3px;
+}
+
 body {
-    background-color: red;
+    width: 780px;
+    margin: 50px auto;
+}
+
+pre {
+    background: #C4C0E7;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+h1, h2, h3 {
+    margin-top: 50px;
+    border-bottom: 2px solid #6758e7;
+}
+
+ul {
+    list-style: square;
+}
+
+a{
+    color: #6758E7;
+    text-decoration: none;
 }
